--- a/index.html
+++ b/index.html
@@ -31,17 +31,20 @@
         <div class="column">
           <h1>Hello,<br> I am Ashwin</h1>
           <p>Electronics and communication engineering undergraduate</p>
+          <button class="waves-effect waves-light btn-large">Resume</button>
         </div>
         <div class="column">
-          <img src="images/proPic.JPG" alt="ashwin" class="responsive">
+          <img src="images/proPic.JPG" alt="ashwin" class="responsive-img">
         </div>
       </div>
     </div>
   </div>
   <!-- 2nd page about -->
-  <div class="about">
-    <h1>Ashwin</h1>
+  <div class="container about">
+    <h1>About</h1>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Corporis eligendi dicta architecto eos? Voluptas minus deserunt perferendis alias et perspiciatis repudiandae cumque nobis at aliquam voluptates, distinctio incidunt ipsa. Harum?Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil tempore delectus consequuntur libero temporibus maxime, sunt sit ducimus suscipit natus vel aperiam consequatur? Reprehenderit dolor dicta optio mollitia laborum sapiente.</p>
   </div>
+
   <!-- 3rd internship/experience -->
   <!-- projects -->
   <!-- contact footer-->
