experience tab updated

--- a/index.html
+++ b/index.html
@@ -40,12 +40,21 @@
     </div>
   </div>
   <!-- 2nd page about -->
-  <div class="container about">
-    <h1>About</h1>
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Corporis eligendi dicta architecto eos? Voluptas minus deserunt perferendis alias et perspiciatis repudiandae cumque nobis at aliquam voluptates, distinctio incidunt ipsa. Harum?Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil tempore delectus consequuntur libero temporibus maxime, sunt sit ducimus suscipit natus vel aperiam consequatur? Reprehenderit dolor dicta optio mollitia laborum sapiente.</p>
+  <div class="about">
+    <div class="container">
+        <h1>About</h1>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Corporis eligendi dicta architecto eos? Voluptas minus deserunt perferendis alias et perspiciatis repudiandae cumque nobis at aliquam voluptates, distinctio incidunt ipsa. Harum?Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil tempore delectus consequuntur libero temporibus maxime, sunt sit ducimus suscipit natus vel aperiam consequatur? Reprehenderit dolor dicta optio mollitia laborum sapiente.</p>
+    </div>
   </div>
 
   <!-- 3rd internship/experience -->
+  <div class="experience">
+    <div class="container">
+        <h1>Experience</h1>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Corporis eligendi dicta architecto eos? Voluptas minus deserunt perferendis alias et perspiciatis repudiandae cumque nobis at aliquam voluptates, distinctio incidunt ipsa. Harum?Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil tempore delectus consequuntur libero temporibus maxime, sunt sit ducimus suscipit natus vel aperiam consequatur? Reprehenderit dolor dicta optio mollitia laborum sapiente.</p>
+    </div>
+      
+    </div>
   <!-- projects -->
   <!-- contact footer-->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
