minor alignment and styling

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <title>Ashwin C S Portfolio</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 </head>
 
@@ -20,7 +21,7 @@
       <ul id="nav-mobile" class="right hide-on-med-and-down">
         <li><a href="sass.html">LinkedIn</a></li>
         <li><a href="badges.html">Gmail</a></li>
-        <li><a href="collapsible.html">Instagram</a></li>
+        <li><a href="collapsible.html">GitHub</a></li>
       </ul>
     </div>
   </nav>
@@ -31,7 +32,7 @@
         <div class="column">
           <h1>Hello,<br> I am Ashwin</h1>
           <p>Electronics and communication engineering undergraduate</p>
-          <button class="waves-effect waves-light btn-large">Resume</button>
+          <button class="waves-effect waves-light btn-large"><a href="https://drive.google.com/file/d/1dheL1sJOQuhLAj7V9Ve1v992XgLOLVud/view?usp=sharing">Download Resume</a></button>
         </div>
         <div class="column">
           <img src="images/proPic.JPG" alt="ashwin" class="responsive-img">
@@ -42,8 +43,10 @@
   <!-- 2nd page about -->
   <div class="about">
     <div class="container">
-        <h1>About</h1>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Corporis eligendi dicta architecto eos? Voluptas minus deserunt perferendis alias et perspiciatis repudiandae cumque nobis at aliquam voluptates, distinctio incidunt ipsa. Harum?Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil tempore delectus consequuntur libero temporibus maxime, sunt sit ducimus suscipit natus vel aperiam consequatur? Reprehenderit dolor dicta optio mollitia laborum sapiente.</p>
+      <div class="row">
+        <div class="col l4"><h1>About</h1></div>
+        <div class="col l8"><blockquote><p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Corporis eligendi dicta architecto eos? Voluptas minus deserunt perferendis alias et perspiciatis repudiandae cumque nobis at aliquam voluptates, distinctio incidunt ipsa. Harum?Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil tempore delectus consequuntur libero temporibus maxime, sunt sit ducimus suscipit natus vel aperiam consequatur? Reprehenderit dolor dicta optio mollitia laborum sapiente.</p></blockquote></div>
+      </div>
     </div>
   </div>
 
